--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+body {
+font-family: sans-serif;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+h1, h2, h3, .card-body>.card-title {
+font-family: cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-title {
+  font-weight: 500;
+  font-size: 1.25rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2 {
+  color: #3046C5;
+}
+
+.card-img-overlay .card-title {
   color: white;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.row-content {
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.site-footer {
+  background-color:black;
+  color: #fff;
+  padding: 20px 0;
+  margin-top: 4rem;
+}
+.site-footer li{
+  color: #fff;
+}
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  color: white;
+ background-image: url('./stars.gif');
+  background-size: cover;
+  height: 50vh;
+}
+
+.jumbotron h2 {
+  color: #CEC8FF;
+}
+
+.navbar-dark {
+  text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.9rem ;
+    letter-spacing: .1rem;
+    background-color:blueviolet;
+}
+.promotion{
+  color: red;
+}
+.heading{
+  text-transform: uppercase;
+
+}
+.heading-underline{
+  width: 4rem;
+  height: .2rem;
+  background-color: #1ebba3;
+  margin:0 auto 3rem;
+}
+.image{
+
+  background-color:rgb(20, 30, 30);
+  width: 400px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 70%;
+
+}
+.image img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 100%;
+  width: auto;
 }
