--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,17 @@ h2 {
   height: 100%;
   width: auto;
 }
+hr{
+  background-color:black;
+}
+.card-title {
+  font: 500 1.25rem "Lobster", cursive;
+}
+
+.card-img-overlay .card-title {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+Card{
+  margin-top: 20px;
+}
