--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ font-family: sans-serif;
 
 
 h1, h2, h3, .card-body>.card-title {
-font-family: cursive;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .card-title {
